# fanorona-cpp

./: CMakeLists.txt  Makefile  README.md  board.cpp  board.h  cell_state.h  console_interface.cpp  console_interface.h  game (copy).cpp  game.cpp  game.h  logger.cpp  logger.h  mcts_agent.cpp  mcts_agent.h  nn_model.cpp  nn_model.h  player.cpp  player.h
checkpoint/: 1.pt
